src/objects/Call_Topic_Access__c.object
<CustomObject>
    <fields>
        <fullName>CallTopicAccessExternalID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>CallTopicAccessExternalID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Topic_Group__c</fullName>
        <label>Call Topic Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Auths and Referrals</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Materials &amp; Communications</fullName>
                </value>
                <value>
                    <fullName>General Request</fullName>
                </value>
                <value>
                    <fullName>Non-Medical</fullName>
                </value>
                <value>
                    <fullName>Proactive Engagement</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Topic__c</fullName>
        <label>Call Topic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Detail_Page__c</fullName>
        <label>Detail Page</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Motion Member Detail</fullName>
                </value>
                <value>
                    <fullName>Member Detail</fullName>
                </value>
                <value>
                    <fullName>Producer Detail</fullName>
                </value>
                <value>
                    <fullName>Group Detail</fullName>
                </value>
                <value>
                    <fullName>Provider Detail</fullName>
                </value>
                <value>
                    <fullName>Member Not Found</fullName>
                </value>
                <value>
                    <fullName>Member Snapshot</fullName>
                </value>
                <value>
                    <fullName>Group Not Found</fullName>
                </value>
                <value>
                    <fullName>Producer Not Found</fullName>
                </value>
                <value>
                    <fullName>Provider Not Found</fullName>
                </value>
                <value>
                    <fullName>Provider Snapshot</fullName>
                </value>
                <value>
                    <fullName>Optum Financial Detail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Except_To_Roles__c</fullName>
        <description>roles from this list is not able to access the call topic</description>
        <label>Except To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Acet Front office</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Manager</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Site Director</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Customer Support Team</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>BES Senior Resolution Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>CART - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>CART - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>Complex Medical Claims - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_To_Roles__c</fullName>
        <description>Only roles from the list can access to the calltopic</description>
        <label>Limit To Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accounts Payable - Agent</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Acet Front office</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>Asian Initiatives B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Manager</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center/CST - Site Director</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Agent</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Customer Support Team</fullName>
                </value>
                <value>
                    <fullName>B&amp;E Call Center - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Agent</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate Customer Support Team - Supervisor</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Manager</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Site Director</fullName>
                </value>
                <value>
                    <fullName>Benefit Advocate - Supervisor</fullName>
                </value>
                <value>
                    <fullName>BES Senior Resolution Specialist</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>Billing - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>CART - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>CART - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>CART - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent - Offshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Agent - Onshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor - Offshore</fullName>
                </value>
                <value>
                    <fullName>Claims Research and Adjustments - Supervisor - Onshore</fullName>
                </value>
                <value>
                    <fullName>Clinical - Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit_to_Public__c</fullName>
        <description>Limiting access to Call Topic access with users in Public Group.</description>
        <label>Limit to Public Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HSA_Certified_Agent</fullName>
                </value>
                <value>
                    <fullName>Spire_Pilot_Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group/Employer</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>UHG</fullName>
                </value>
                <value>
                    <fullName>Unlisted Contact</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VF_Page_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>VF Page Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Call Topic Access</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Call_Topic__c</columns>
        <columns>Detail_Page__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Except_To_Roles__c</columns>
        <columns>Limit_To_Roles__c</columns>
        <columns>CallTopicAccessExternalID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All1</label>
    </listViews>
    <listViews>
        <fullName>SAE_Call_Topic_Access</fullName>
        <columns>NAME</columns>
        <columns>Call_Topic__c</columns>
        <columns>Originator_Type__c</columns>
        <columns>Detail_Page__c</columns>
        <columns>Limit_to_Public__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Detail_Page__c</field>
            <operation>equals</operation>
            <value>Member Not Found,Member Snapshot,Provider Not Found,Provider Snapshot</value>
        </filters>
        <label>SAE Call Topic Access</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Call Topic Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Topic Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>